--- a/appium_learning/src/test/resources/youdaonote_config.properties
+++ b/appium_learning/src/test/resources/youdaonote_config.properties
@@ -1,7 +1,7 @@
 # url=http://appium_server_ip:port/wd/hub
 url=http://127.0.0.1:4723/wd/hub
 deviceName=LRTest7
-app=C:/Users/lirong3/eclipse-workspace/appium_learning/app/youdaonote_android_6.6.6_youdaoweb.apk
+app=D:/appiumWD/youdaonote_android_6.6.6_youdaoweb.apk
 appPackage=com.youdao.note
 appActivity=.activity2.SplashActivity
 noReset=true
