--- a/appium_learning/pom.xml
+++ b/appium_learning/pom.xml
@@ -19,6 +19,16 @@
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                   <suiteXmlFiles>
+                      <suiteXmlFile>testng-delete_note.xml</suiteXmlFile>
+                   </suiteXmlFiles>
+                </configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
